samples/_failures_safe/1761173709_0bce9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cfa3510.c: In function ‘main’:
./samples/SAFE/__tmp_8cfa3510.c:177:44: error: expected ‘)’ at end of input
  177 |     if (fgets(choice_str, sizeof(choice_str
      |                                 ~          ^
      |                                            )
./samples/SAFE/__tmp_8cfa3510.c:177:9: error: too few arguments to function ‘fgets’
  177 |     if (fgets(choice_str, sizeof(choice_str
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_8cfa3510.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_8cfa3510.c:177:5: error: expected declaration or statement at end of input
  177 |     if (fgets(choice_str, sizeof(choice_str
      |     ^~
